tests/baselines/reference/AnnotationDeclarationNegative3.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative3.ets(1,17): error TS1005: '{' expected.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative3.ets(1,25): error TS1434: Unexpected keyword or identifier.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative3.ets(1,25): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative3.ets (3 errors) ====
    @interface Anno extends A {}
                    ~~~~~~~
!!! error TS1005: '{' expected.
                            ~
!!! error TS1434: Unexpected keyword or identifier.
                            ~
!!! error TS2304: Cannot find name 'A'.